[package]
name = "barium"
authors = [ "Quigly" ]
description = "Safe vulkan abstraction"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/quigly/barium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.134"
ash = "0.37.0+1.3.209"
qpl = "0.2.0"
